--- a/angular.json
+++ b/angular.json
@@ -91,8 +91,23 @@
             ],
             "scripts": []
           }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "src/**/*.ts",
+              "src/**/*.html"
+            ]
+          }
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "6c385ba5-fa56-4403-86c8-726dddf7681e",
+    "schematicCollections": [
+      "@angular-eslint/schematics"
+    ]
   }
 }
